Fix description spacing without meta on item

--- a/src/definitions/views/item.less
+++ b/src/definitions/views/item.less
@@ -154,10 +154,6 @@
   font-size: @headerFontSize;
 }
 
-.ui.items > .item > .content > .meta + .description{
-  margin-top: @descriptionDistance;
-}
-
 /*--------------
      Floated
 ---------------*/
@@ -192,6 +188,7 @@
 ---------------*/
 
 .ui.items > .item > .content > .description {
+  margin-top: @descriptionDistance;
   max-width: @descriptionMaxWidth;
   font-size: @descriptionFontSize;
   line-height: @descriptionLineHeight;
